Fixed wrong color change

--- a/VLN2/Content/bootstrap-less/variables.less
+++ b/VLN2/Content/bootstrap-less/variables.less
@@ -186,7 +186,7 @@
 @input-bg-disabled:              @gray-lighter;
 
 //** Text color for `<input>`s
-@input-color:                    white;//@gray;
+@input-color:                    @gray;
 //** `<input>` border color
 @input-border:                   #ccc;
 
